Consider word wrapping behavior when rendering multiline texts

Bug: 866720
Change-Id: Ie3de731b94e6db978acbb0ef2d951b4399c2e25b
Reviewed-on: https://chromium-review.googlesource.com/1147670
Commit-Queue: Wei-Yin Chen (陳威尹) <wychen@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577821}
Former-commit-id: ffd5fe1e1570a60aa8d350f7343fca1f69614c81